# agent-workflow-template

./: .env.example  .gitignore  LICENSE.md  PRD.md  README.md  pyproject.toml
.github/: copilot-instructions.md
app/: __init__.py  cli.py  config.py  logging_config.py  metrics.py  progress_tracker.py  web.py  web_runner.py
app/agents/: __init__.py  coordinator.py
app/agents/tools/: __init__.py  knowledge_ingestion.py  knowledge_retrieval.py  org_context.py  url_scraper.py
config/: config.yaml
config/instructions/: coordinator.md  knowledge_ingestion.md  org_context.md  url_scraper.md
config/templates/: note_template.md
docs/: PRD.md  SRS.md  UI-Design.md  architecture.md  prompts.md
docs/agents/: agent-doc-template.md  knowledge_ingestion_agent.md  url_scraper_agent.md
knowledge/: instructions.md  url_index.yaml
knowledge/notes/: _index.sample.yaml
knowledge/sources/: url_index.sample.yaml
notes/: 20251227-agent-workflow-template-github-repository-summary.md  _index.yaml
tests/: __init__.py  conftest.py  test_config.py  test_coordinator.py  test_knowledge_ingestion.py  test_url_scraper.py  test_url_scraper_agent.py
